added the ability to change the graph data added the ability to hightlight data units/bars added mouseover details for bar data

--- a/newspoverty.css
+++ b/newspoverty.css
@@ -16,18 +16,16 @@
 .era-bar>div {
 	position: absolute;
 	height: 100%;
-
 }
 
 .era-bar>.era {
-	cursor: pointer;
 	background-color: transparent;
 	border-left: none;
 }
 
 .era-bar>.era:hover, .era-bar>.era.hover {
 	background-color: rgba(245, 245, 220, 0.3);
-	border-radius:10px 10px 0 0;
+	border-radius: 10px 10px 0 0;
 }
 
 .era-bar>.era:before {
@@ -102,16 +100,16 @@
 	bottom: 45px;
 	z-index: 1;
 	padding: 2px 0;
-	pointer-events: none;
 	opacity: 1;
 	transition: opacity 0.5s;
+	width: 100%;
 }
 
 .timeline-graph.detail {
 	opacity: 0;
 }
 
-.era-s:hover .era-bar, .era-s.hover .era-bar  {
+.era-s:hover .era-bar, .era-s.hover .era-bar {
 	height: 100px;
 }
 
@@ -119,30 +117,48 @@
 	opacity: 0
 }
 
-.era-s:hover .timeline-graph.detail, .era-s.hover .timeline-graph.detail {
+.era-s:hover .timeline-graph.detail, .era-s.hover .timeline-graph.detail
+	{
 	opacity: 1
 }
 
 .timeline-graph.detail .Graph_Title {
-	    display: inline-block;
-    background-color: rgba(255,255,255,0.9);
-    padding: 3px 10px;
+	display: inline-block;
+	background-color: rgba(255, 255, 255, 0.9);
+	padding: 3px 10px;
 }
 
-
 .timeline-opts label {
-    display: inline-block;
-    margin: 0;
-    font-size: 10px;
-    color: cadetblue;
+	display: inline-block;
+	margin: 0;
+	font-size: 10px;
+	color: cadetblue;
+	margin-left: 5px;
+	border-left: 1px solid;
+	padding-left: 5px;
 }
 
 .timeline-opts label>input {
-    vertical-align: baseline;
-    margin: 0 3px 0 10px;
+	vertical-align: baseline;
+	margin: 0 3px 0 10px;
 }
 
 .timeline-opts {
-    z-index: 1;
-    pointer-events: all;
+	z-index: 1;
+	pointer-events: all;
+}
+
+.timeline-opts label>span {
+	overflow: hidden;
+	white-space: nowrap;
+	max-width: 58px;
+	display: inline-block;
+	vertical-align: bottom;
+	text-overflow: ellipsis;
+}
+
+.timeline-container .ui-ctrl-handle>span:after {
+	text-shadow: 0 0 1px white;
+	font-weight: 400;
+	color: black;
 }
