--- a/newspoverty.css
+++ b/newspoverty.css
@@ -130,12 +130,11 @@
 
 .timeline-opts label {
 	display: inline-block;
-	margin: 0;
-	font-size: 10px;
-	color: cadetblue;
-	margin-left: 5px;
-	border-left: 1px solid;
-	padding-left: 5px;
+    margin: 0;
+    font-size: 10px;
+    color: cadetblue;
+    margin-right: 5px;
+    padding-left: 5px;
 }
 
 .timeline-opts label>input {
@@ -151,10 +150,8 @@
 .timeline-opts label>span {
 	overflow: hidden;
 	white-space: nowrap;
-	max-width: 58px;
 	display: inline-block;
 	vertical-align: bottom;
-	text-overflow: ellipsis;
 }
 
 .timeline-container .ui-ctrl-handle>span:after {
