--- a/newspoverty.css
+++ b/newspoverty.css
@@ -126,6 +126,7 @@
 	display: inline-block;
 	background-color: rgba(255, 255, 255, 0.9);
 	padding: 3px 10px;
+	position:initial;
 }
 
 .timeline-opts label {
